row collapsing issue resolved, removed the bg colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ input.textbox {
 }
 
 .msg-height {
-  min-height: 75px;
+  min-height: 65px;
   position: static;
 } 
 
